--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@types/cors": "^2.8.13",
     "@types/jest": "^29.5.0",
     "@types/pg": "^8.6.6",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.37.0",
@@ -41,6 +42,7 @@
     "serverless": "^3.30.1",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.4",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
