--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test:functional": "jest src/__tests__/functional",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
+    "test:e2e": "detox test -c ios.sim.debug",
+    "test:e2e:build": "detox build -c ios.sim.debug",
+    "test:e2e:android": "detox test -c android.emu.debug",
+    "test:e2e:android:build": "detox build -c android.emu.debug",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "type-check": "tsc --noEmit"
   },
@@ -36,7 +40,7 @@
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.9.0",
+    "@testing-library/react-native": "^12.4.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.2.45",
     "@types/react-native": "^0.73.0",
@@ -46,8 +50,11 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
+    "jest-circus": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "detox": "^20.13.5",
+    "ts-jest": "^29.1.1"
   }
 }
