--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.4.0",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.73.1",
@@ -48,13 +50,13 @@
     "@typescript-eslint/parser": "^6.15.0",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "detox": "^20.13.5",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-circus": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "detox": "^20.13.5",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
