fix: resolve dependency conflicts in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,9 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm install -g npm@latest
+        npm ci --legacy-peer-deps
     
     - name: Run tests
       run: npm test
