--- a/package.json
+++ b/package.json
@@ -51,12 +51,16 @@
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "detox": "^20.13.5",
+    "dotenv": "^16.4.7",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-circus": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.1.1",
+    "react-test-renderer": "^18.2.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
