--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-circus": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.1.1",
     "react-test-renderer": "^18.2.0",
